<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".CalcActivity">

    <TextView
        android:id="@+id/ideaText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/idea"
        android:textAlignment="center"
        android:textColor="@color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/etFirst"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/firstNum"
            android:textColorHint="@color/grey"
            android:background="@color/white"
            android:textAlignment="center"
            android:inputType="number"
            android:textColor="@color/grey"/>

        <EditText
            android:id="@+id/etSecond"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/secondNum"
            android:textColorHint="@color/grey"
            android:background="@color/white"
            android:textAlignment="center"
            android:inputType="number"
            android:textColor="@color/grey" />

        <EditText
            android:id="@+id/etThird"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/thirdNum"
            android:textColorHint="@color/grey"
            android:background="@color/white"
            android:textAlignment="center"
            android:inputType=""
            android:textColor="@color/grey" />

    </LinearLayout>

    <Button
        android:id="@+id/btnStart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/red"
        android:text="@string/sum"
        android:textColor="@color/white" />
</LinearLayout>